# vlm-thesis

./: .gitignore  CITATION.cff  LICENSE  Mapping NOTES  README.md  frames_2026-03-08_13.33.39.gv  frames_2026-03-12_14.07.36.gv  frames_2026-03-20_13.44.00.gv  frames_2026-03-20_14.35.45.gv  frames_2026-03-26_19.47.15.gv  frames_2026-04-22_09.28.59.gv  frames_2026-04-22_09.30.08.gv  remap_topics.py  vlm_test_params.yaml
Env1_Run1/: metadata.yaml
src/: Camera Info - Real & SIM
src/multi_cam_perception/: package.xml  setup.cfg  setup.py
src/multi_cam_perception/launch/: dual_cam_semantic_mapping.launch.py  dual_cam_vit_semantic_mapping.launch.py
src/multi_cam_perception/multi_cam_perception/: ros_node.py  ros_node_vit.py  sam2_map_node.py  vlm_label_node_vit.py  vlm_rviz_node.py  yolo_map_node.py
src/semantic_mapping/: package.xml  setup.py
src/semantic_mapping/launch/: semantic_mapping.launch.py  vit_vlm_mapping.launch.py
src/semantic_mapping/semantic_mapping/: da3_map_node.py  evaluate_f1.py  evaluate_spe.py  f1_metric.py  final_stat_analysis.py  final_stat_analysisV2.py  fisheye_rectify_node.py  llm_orchestrator.py  map_visualizer_real.py  map_visualizer_sim.py  mcs_metric.py  multi_run_visualizer.py  qwen_vlm_test_node.py  ros_node.py  ros_node_vit.py  rviz_publisher_node.py  sam2_map_node.py  sla_metric.py  spe_metric.py  sss_metric.py  statistical_analysis.py  vlm_label_node.py  vlm_label_node_vit.py  vlm_rviz_node.py  vlm_test_node.py  yolo_map_node.py
src/thesis_mapping/: package.xml  setup.cfg  setup.py
src/thesis_mapping/custom_mapping/: map_saver_node.py  mapping_node.py  new_map_node.py  semantic_gt_node.py
src/thesis_mapping/launch/: depth_to_cloud.launch.py
src/thesis_mapping/thesis_mapping/: mapping_node.py
src/thesis_octomap_mapping/: package.xml  setup.cfg  setup.py
src/thesis_pp_develop/: package.xml  setup.cfg  setup.py
src/thesis_pp_develop/thesis_pp_develop/: diag_test.py  extract_camera_info.py  extract_static_tf.py  frame_analyse1.py  frame_analyse2.py  frames_process.py  map_plot_test.py  odomExtract_per_frame.py  pixel_2_ray_test.py  rayOrigin_test.py  rayTriangle_test.py  ray_image_verify.py  ray_visualizer.py  rviz_map_publisher.py  sift_test.py  yolo_frame_test.py  yolo_result_store.py  yolo_result_storeNEW.py
src/uvc1_gazebo/: CMakeLists.txt  SETUP_README.txt  package.xml  setup.py
src/uvc1_gazebo/config/: fisheye_front_calibration.yaml  nav2_params.yaml  nav2_params_amcl.yaml  nav2_params_amcl1.yaml  nav2_params_rtab1.yaml  nav2_params_rtab2.yaml  rtabmap_params_exploration.yaml
src/uvc1_gazebo/launch/: bringup_launch_amcl_d435i.py  bringup_launch_amcl_d435i1.py  bringup_launch_amcl_d455.py  bringup_launch_amcl_d4551.py  bringup_launch_amcl_dual.py  bringup_launch_amcl_slam1.py  bringup_launch_multicamera copy.py  bringup_launch_multicamera.py  exploration_launch.py  localization_launch_rtab_multicamera.py  navigation_exploration_launch.py  pr1_world_launch.py  pr2_world_launch.py  turtlebot3_my_world.launch.py  uvc1_my_world_direct.launch.py  uvc1_robot_state_publisher.launch.py  uvc1_robot_state_publisher_direct.launch.py  uvc1_room2_world.launch.py  uvc1_room3_world.launch.py  uvc1_room4_world.launch.py  uvc1_room5_world.launch.py  uvc1_room_world.launch.py  uvc1_spawn.launch.py  uvc1_spawn.launch_direct.py
src/uvc1_gazebo/models/uvc1_virofighter/: debug_model.sdf  full_model_d435i_d455.sdf  model.sdf  model_dae.sdf  model_dae2.sdf  model_lump_robot.urdf.sdf  model_lump_uvc1_virofighter.urdf.sdf  model_sensor_plugins.sdf
src/uvc1_gazebo/rviz/: nav2_gazebo.rviz  simulation.rviz
src/uvc1_gazebo/urdf/: full_model.sdf  half.sdf  robot.urdf  uvc1_virofighter.urdf  uvc1_virofighter_direct.urdf  uvc1_virofighter_sdf.urdf
src/uvc1_gazebo/uvc1_gazebo/scripts/: map_saver_periodic.py
src/uvc1_gazebo/worlds/: hospital.world  my_world.world  uvc1_room.world  uvc1_room2.world  uvc1_room3.world  uvc1_room4.world  uvc1_room5.world
src/vf_camera_tf_publisher/srv/: StartCalibrationIntrinsics.srv
src/vf_robot_bringup/: CMakeLists.txt  package.xml
src/vf_robot_bringup/config/: controllers.yaml
src/vf_robot_bringup/launch/: gazebo.launch.py  robot_description.launch.py  rviz_gazebo.launch.py
src/vf_robot_description/: CMakeLists.txt  package.xml
src/vf_robot_description/urdf/: robot_gazebo.xacro  robot_urdf.xacro
src/vf_robot_description/urdf/base_wheels/: base.xacro  wheels.xacro
src/vf_robot_description/urdf/gazebo/: differential_drive.xacro  plugins.txt  sensors_plugins.xacro
src/vf_robot_description/urdf/sensors/: d435.xacro  sonars.xacro  t265.xacro  uvc_lights.xacro
src/vf_robot_model/: CMakeLists.txt  package.xml  setup.py
src/vf_robot_model/models/UVC_robot/: model.config  model.sdf
src/vf_robot_model/models/UVC_robot_new/urdf/: install_plugins.sh  plugins.txt  robot.urdf  robot1.urdf
src/vf_robot_model/worlds/: hospital.world
src/vf_robot_model/worlds/Hospital/: model.sdf
test2_ros2/: metadata.yaml
test2_ros2_remapped/: metadata.yaml
thesis_fisheye_bag4/: metadata.yaml
thesis_fisheye_bag5/: metadata.yaml
thesis_fisheye_bag6/: metadata.yaml
