<?xml version="1.0"?>
<package format="3">
  <name>vf_robot_model</name>
  <version>0.0.0</version>
  <description>VF Robot Model package with C++ and Python ROS2 nodes.</description>
  <maintainer email="olipravin18@gmail.com">pravin</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend> <!-- for Python nodes -->

  <!-- Dependencies for C++ & Python nodes -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vfmessages</depend> <!-- your custom messages package -->

  <!-- Optional test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
